# ZariBox

./: .gitignore  README.md  archbox.toml  archbox.yaml  flake.nix  install.sh  pyproject.toml  test.yaml  zaribox
.github/workflows/: python-package.yml  release.yml
tests/: test_basic.py
zaribox/: __init__.py  __main__.py  cli.py  config.py  logging.py  models.py  pkgmgr.py  shell.py  state.py
zaribox.d/: backend.sh  backend_distrobox.sh  backend_podman.sh  commands.sh  config.sh  core.sh  pkgmgr.sh  state.sh  yaml.sh
zaribox/backends/: base.py  distrobox.py  podman.py
zaribox/commands/: apply.py  destroy.py  enter.py  list_cmd.py
zaribox_py/: cli.py  shell.py  state.py
zaribox_py/backends/: __init__.py  base.py  distrobox.py  podman.py
zaribox_py/commands/: apply.py  destroy.py  enter.py  status.py
