[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zaribox"
dynamic = ["version"]
description = "Declarative Distrobox manager"
requires-python = ">=3.10"

[project.scripts]
zaribox = "zaribox.cli:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["zaribox", "zaribox.*"]

[tool.setuptools.dynamic]
version = {attr = "zaribox.__version__"}

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]
